--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>E.N.D.softwares</title>
-        <link rel="icon" type="image/x-icon" href="C:\Users\edinr\OneDrive\Desktop\imgs 2.0\E.N.D new/heck.png">
-    <link rel="icon" type="image" href="C:\Users\edinr\OneDrive\Desktop\imgs 2.0\E.N.D new\heck.png">
+        <link rel="icon" type="image/x-icon" href="\imgs 2.0\E.N.D new/heck.png">
+    <link rel="icon" type="image" href="\imgs 2.0\E.N.D new\heck.png">
     <link rel="stylesheet" href="E.N.D.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img id="hack" src="C:\Users\edinr\OneDrive\Desktop\imgs 2.0\E.N.D new\heck.png"  class="d-block w-100" alt="..."></a>
+        <a class="navbar-brand" href="#"><img id="hack" src="\imgs 2.0\E.N.D new\heck.png"  class="d-block w-100" alt="..."></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,10 +46,10 @@ High tier websites1000$-10000$.</textarea>
     <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img id="rawr" src="C:\Users\edinr\OneDrive\Desktop\imgs 2.0\rawr.jpg"  class="d-block w-100" alt="...">
+      <img id="rawr" src="\imgs 2.0\rawr.jpg"  class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item active">
-      <img id="mewr" src="C:\Users\edinr\OneDrive\Desktop\imgs 2.0\mewr.jpg" class="d-block w-100" alt="...">
+      <img id="mewr" src="\imgs 2.0\mewr.jpg" class="d-block w-100" alt="...">
     </div>
     </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
